modules/apps/collaboration/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/main.scss
@import "bourbon";
@import "mixins";

@import "common_main";

.portlet-blogs {
	.entry-options {
		margin-bottom: 10px;
		min-height: 30px;
		position: relative;

		&.inline {
			position: absolute;
			right: 0;
			top: 0;
		}

		& > div {
			padding: 5px;
			text-align: center;
		}

		& > .btn {
			position: absolute;
			right: 0;
			top: 0;
		}
	}

	.taglib-custom-attributes-list {
		margin-bottom: 1em;
	}

	.taglib-custom-attributes-list label {
		display: block;
	}

	.entry-author {
		float: left;
		line-height: 20px;
		margin-right: 30px;
		max-width: 50%;
		vertical-align: middle;
	}

	.entry-info {
		margin-top: 15px;

		.social-bookmarks {
			margin-top: 1em;
			text-align: center;

			@include respond-to(desktop) {
				float: right;
				margin-top: 0;
			}

			ul {
				margin: 0;
			}
		}
	}

	.edit-actions {
		padding-left: 0;
	}

	.lfr-blogs-small-image-selector {
		float: left;
		margin-right: 20px;
		width: 200px;

		.taglib-image-selector {
			min-height: 150px;

			.drag-drop-label {
				font-size: 15px;
			}

			.file-validation-info {
				font-size: 13px;
			}
		}
	}

	.border-top {
		border-top: 1px solid transparent;
		padding-top: 20px;
	}

	.entry-footer {
		vertical-align: middle;

		.entry-social, .flags, .social-bookmarks {
			display: inline-block;
		}

		.entry-social {
			& > div {
				display: inline-block;
				margin-top: 0;
				vertical-align: top;
			}

			.comments {
				margin: 2px 20px 2px 0;
			}

			.ratings .taglib-ratings {
				display: inline-block;
				margin-right: 8px;
				vertical-align: middle;

				&.stars {
					margin-top: 0;

					.liferay-rating-score {
						padding-left: 0;
					}
				}
			}

			.taglib-social-bookmarks {
				display: inline-block;
				vertical-align: middle;
			}

			@include respond-to(phone, tablet) {
				clear: both;
				display: block;

				&:before {
					display: none;
				}
			}
		}

		&:after {
			content: '';
			display: inline;
			line-height: 60px;
		}
	}

	.comments {
		margin-top: 60px;
	}

	.edit-entry {
		.entry-title h1 p {
			line-height: 80px;
		}

		.entry-subtitle {
			margin-bottom: 30px;

			h4 p {
				line-height: 45px;
			}
		}

		.cover-image-caption .alloy-editor {
			padding-left: 0;

			&.alloy-editor-placeholder:empty:not(:focus) {
				border-left-width: 0;
			}
		}
	}

	.entry.draft, .entry.pending, .entry.scheduled {
		border: 1px solid transparent;
		padding: 5px;

		h3 {
			margin-top: 0;
		}
	}

	.entry-content {
		margin-bottom: 60px;

		h4 {
			margin-top: 0;

			a {
				color: inherit;

				&:hover {
					text-decoration: none;
				}
			}
		}
	}

	.entry-metadata {
		padding: 30px 0;
	}

	.entry-navigation h2 {
		margin-bottom: 15px;
		margin-top: 0;
	}

	.entry-navigation {
		padding: 60px 0;
		width: 100%;

		.small-image {
			height: 140px;
		}
	}

	.entry-card {
		.aspect-ratio.aspect-ratio-bg-cover {
			@include media-query(null, $screen-xs-max) {
				padding-bottom: 50%;
			}
		}
	}

	.nameplate-content {
		padding-left: 0;
		vertical-align: middle;
	}

	.search-form {
		float: right;
	}

	.search-root-entry {
		float: right;
	}

	.subscribe {
		margin-bottom: 1.5em;
		text-align: right;
	}

	.taglib-asset-links {
		h2 .icon-link {
			display: none;
		}

		.asset-links-list {
			margin-left: 0;
			margin-top: 5px;
			padding-left: 0;
		}
	}

	.taglib-page-iterator .lfr-pagination {
		margin-top: 25px;
	}

	.form-search:after {
		clear: both;
		content: '';
		display: block;
		height: 0;
		visibility: hidden;
	}

	#blogsCommentsPanelContainer {
		border-width: 0;
	}
}

.firefox .portlet-blogs fieldset.input-container {
	display: table-column;
}

.social-boomarks-options {
	margin-left: 2em;
}

/* Skin */

.portlet-blogs {
	.border-top {
		border-color: #EDEEF0;
	}

	.edit-entry {
		h3 {
			color: #2B4259;
		}

		.cover-image-caption .alloy-editor {
			color: #868889;
		}
	}

	.entry.draft, .entry.pending, .entry.scheduled {
		border-color: #CCC;
	}

	.entry-footer .entry-social {
		float: right;

		.taglib-flags {
			color: #999;
		}
	}

	.entry-title {
		display: block;
		position: relative;

		h1 {
			font-size: 60px;
			line-height: 80px;
			margin-bottom: 25px;
			text-align: center;
			word-wrap: break-word;
		}

		h2 {
			margin-right: 30px;
			margin-top: 0;

			.alloy-editor-placeholder {
				color: #32A8E6;

				p {
					margin-bottom: 0;
				}
			}

			& > a {
				color: inherit;
				font-weight: bold;
				word-wrap: break-word;

				&:hover {
					text-decoration: none;
				}
			}
		}

		.social-bookmarks {

			@include respond-to(desktop) {
				display: inline-block;
				position: absolute;
				right: 35px;
				top: 0;
			}

			ul {
				margin-top: 6px;
			}
		}
	}

	.entry.draft, .entry.pending, .entry.scheduled {
		background: #EEE;
		color: #555;
	}

	.entry-navigation .small-image {
		background-position: center;
		background-repeat: no-repeat;
		background-size: cover;
	}

	.search-root-entry {
		color: #999;
	}

	.separator {
		border-color: transparent;
	}
}

